rtest/tests/jsr335/Semantics/LambdaTypeAnalysis/AssignmentContext/ShouldFail/syntax04/Test.java
// .result=COMPILE_FAIL

public class Test {
	public interface TestInterface {
		 public int m();
	}
	
	public static void main(String[] args) {
		String s = args[() -> 56];
    }
}
